# gemini-bq-query-analyzer

./: .gitignore  .mdformat.toml  Makefile  README.md  base_config.ini  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  deploy.yml
bq-antipattern-api/: .dockerignore  .gcloudignore  Dockerfile  README.md  app.py
docs/: design-decisions.md  manual-setup-gcloud.md
docs/adr/: 0001-notification-channels.md  0002-failure-detection-workflow-layer.md  0003-signed-url-delivery.md  0004-terraform-state-backend.md  README.md
main-app/: .gcloudignore  Dockerfile  requirements.txt
main-app/docs/: CREATE_DUMMY_TABLE.md  env_variables_to_sercretmanager.md  saas_expansion_guide.md
main-app/prompts/: gemini_prompt.txt
main-app/sql/: antipattern-list.sql  logical_vs_physical_storage_analysis.sql  worst_ranking.sql
main-app/src/: main.py
terraform/: .terraform.lock.hcl  README.md  api.tf  artifact_registry.tf  bigquery.tf  cloud_run.tf  cloud_run_job.tf  cloud_run_service.tf  cloud_scheduler.tf  iam.tf  main.tf  monitoring.tf  storage.tf  variables.tf  workflows.tf
tests/: test_tools.py
tools/: bootstrap.sh  check.sh  check_make_docs.py  ensure_state_bucket.py  generate_configs.py  generate_template.py  generate_tfvars.py  github_secrets.sh  run_tenant.sh  set_secret.sh  setup.sh  upload_tenants.py
workflows/: analyzer_workflow.yaml
